Quick Update to fix spacing problem with containers in index.html

--- a/css/style.css
+++ b/css/style.css
@@ -773,6 +773,10 @@ a:hover, a:focus, a:active {
   }
 }
 
+.about-us {
+  margin-bottom: -25px !important;
+}
+
 .probootstrap-hero {
   background-size: cover;
   background-position: center center;
